# sfxr-web

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  deno.json  fresh.gen.ts  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.js  vite.config.ts
.github/: dependabot.yml
components/: Button.tsx
islands/: Generator.tsx
routes/: [seed].tsx  _app.tsx  index.tsx
sfxr-rs/: Cargo.toml
sfxr-rs/fork/sfxr/source/: main.cpp  tools.cpp  tools.h
sfxr-rs/pkg/: package.json  sfxr_rs.d.ts  sfxr_rs.js  sfxr_rs_bg.wasm  sfxr_web.d.ts  sfxr_web.js  sfxr_web_bg.wasm  sfxr_web_bg.wasm.d.ts
sfxr-rs/src/: generator.rs  lib.rs  main.rs
sfxr-web/: Cargo.toml  rustfmt.toml
sfxr-web/pkg/: package.json  sfxr_web.d.ts  sfxr_web.js  sfxr_web_bg.wasm  sfxr_web_bg.wasm.d.ts
sfxr-web/src/: lib.rs
sfxr-web/src/sfxr/: generator.rs  mod.rs
sfxr-web/src/sfxr-new/: mod.rs
src/: app.css  app.html  index.ts
src/components/: Button.svelte  ButtonLink.svelte  Line.svelte  Slider.svelte  SoundEffectGenerator.svelte
src/routes/: +layout.svelte  +page.svelte  [seed].svelte  index.svelte
src/routes/[slug]/: +page.svelte
static/: sfxr_web_bg.wasm
