[package]
name = "sfxr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
wasm-bindgen = "0.2.79"

[[bin]]
name = "sfxr-rs-native"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"