[package]
name = "sfxr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
wasm-bindgen = "0.2.79"
dasp = "0.11.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[[bin]]
name = "sfxr-rs-native"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"