[package]
name = "sfxr-web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.79"
rand = { version = "0.8", features = ["small_rng"]}
getrandom = { version = "0.2.6", features = ["js"] }
dasp = "0.11.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'AudioBuffer',
  'AudioBufferSourceNode'
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"